--- a/index.html
+++ b/index.html
@@ -169,15 +169,12 @@
             <h3>Send Us An Email</h3>
             <form>
                 <div class="form-group">
-                    <label for="exampleInputEmail1">Email address</label>
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                     <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Your Message" rows="3"></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
-        </div>
-        <div id="work">
-            <h4>Our Other Work</h4>
         </div>
     </footer>
     <!-- Bootstrap JS -->
