--- a/index.html
+++ b/index.html
@@ -9,27 +9,24 @@
     <!-- External CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!-- Riteous Font -->
-    <link href="https://fonts.googleapis.com/css?family=Righteous|Source+Sans+Pro" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Source+Sans+Pro" rel="stylesheet">
 </head>
 
 <body>
-    <div id="wrapper">
-        <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>Contact</li>
-        </ul>
+    <div class="header">
+        <nav>
+            <ul>
+                <li><a class="tgjactive" href="#">Home</a></li>
+                <li><a href="#">Form</a></li>
+                <li><a href="#">Showcase</a></li>
+            </ul>
+        </nav>
     </div>
     <!-- welcome section -->
-    <section id="intro"> 
-        <div class="hello">
-            <div class="hi">
-                Hello
-            </div>
-        </div>
+    <section id="sec1">
     </section>
     <!-- client showcase slideshow -->
-    <section id="clients">
+    <section id="sec2">
         <h2>See Our Past Clients</h2>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="3000">
             <ol class="carousel-indicators">
@@ -45,7 +42,7 @@
                                 <img class="d-block w-100" src="assets/svg/carousel1.svg" alt="First slide">
                             </div>
                             <div class="col-lg-6 my-auto ml-0">
-                                <p>Create a new html file called add.html //make a function called "adder" that take three arguments (x, y, z). // The function should add the arguments together, and log the result to the console. //check if your function works by trying the following lines: /* add(1,2,3); add(3,2,1); add(4,4,4); add(5,6,7); */</p>
+                                <p class="clients">Create a new html file called add.html //make a function called "adder" that take three arguments (x, y, z). // The function should add the arguments together, and log the result to the console. //check if your function works by trying the following lines: /* add(1,2,3); add(3,2,1); add(4,4,4); add(5,6,7); */</p>
                                 <p class="comment">result to the console. //check if your function works by trying the following lines: /* add(1,2,3); add(3,2,1); add(4,4,4); add(5,6,7); </p>
                             </div>
                         </div>
@@ -58,7 +55,9 @@
                                 <img class="d-block w-100" src="assets/svg/carousel1.svg" alt="First slide">
                             </div>
                             <div class="col-lg-6 my-auto ml-0">
+                                <p class="clients">
                                 Create a new html file called add.html //make a function called "adder" that take three arguments (x, y, z). // The function should add the arguments together, and log the result to the console. //check if your function works by trying the following lines: /* add(1,2,3); add(3,2,1); add(4,4,4); add(5,6,7); */
+                                </p>
                                 <p class="comment">result to the console. //check if your function works by trying the following lines: /* add(1,2,3); add(3,2,1); add(4,4,4); add(5,6,7); </p>
                             </div>
                         </div>
@@ -71,7 +70,9 @@
                                 <img class="d-block w-100" src="assets/svg/carousel1.svg" alt="First slide">
                             </div>
                             <div class="col-lg-6 my-auto ml-0">
+                                <p class="clients">
                                 Create a new html file called add.html //make a function called "adder" that take three arguments (x, y, z). // The function should add the arguments together, and log the result to the console. //check if your function works by trying the following lines: /* add(1,2,3); add(3,2,1); add(4,4,4); add(5,6,7); */
+                                </p>                                
                                 <p class="comment">result to the console. //check if your function works by trying the following lines: /* add(1,2,3); add(3,2,1); add(4,4,4); add(5,6,7); </p>
                             </div>
                         </div>
@@ -89,7 +90,7 @@
         </div>
     </section>
     <!-- our process -->
-    <section id="clientshowcase">
+    <section id="sec3">
         <div class="container">
             <h3>Follow Our Easy 3 Step Process</h3>
             <div class="row">
@@ -97,15 +98,16 @@
                     <img src="assets/svg/step2.svg" class="picture">
                 </div>
                 <div class="col-sm-8">
-                    <p id="stepstext">
+                    <p class="stepstext">
                         Create a new html file called add.html //make a function called "adder" that take three arguments (x, y, z). // The function should add the arguments together, and log the result to the console. //check if your function works by trying the following lines: /*
                     </p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-8">
-                    <p id="stepstext">
-                        Create a new html file called add.html //make a function called "adder" that take three arguments (x, y, z). // The function should add the arguments together, and log the result to the console. //check if your function works by trying the following lines: /*</p>
+                    <p class="stepstext">
+                        Create a new html file called add.html //make a function called "adder" that take three arguments (x, y, z). // The function should add the arguments together, and log the result to the console. //check if your function works by trying the following lines: /*
+                    </p>
                 </div>
                 <div class="col-sm-4">
                     <img src="assets/svg/step2.svg" class="picturemiddle">
@@ -116,13 +118,13 @@
                     <img src="assets/svg/step2.svg" class="picture">
                 </div>
                 <div class="col-sm-8">
-                    <p id="stepstext">
+                    <p class="stepstext">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </div>
             </div>
         </div>
     </section>
-    <section id="team">
+    <section id="sec4">
         <h2>Meet The Team</h2>
         <div class="container">
             <div class="row">
@@ -132,7 +134,7 @@
                             <img src="assets/images/Christina_pic.jpg" class="profileimg">
                         </div>
                         <div class="col-lg p-0">
-                            <h5>Christina Sayegh</h5>
+                            <h4>Christina Sayegh</h4>
                             <p class="aboutinfo">Graphic Designer/Illustrator</p>
                         </div>
                     </div>
@@ -143,14 +145,14 @@
                             <img src="assets/images/Kevin_pic.jpg" class="profileimg">
                         </div>
                         <div class="col-lg p-0">
-                            <h5>Kevin Yeh</h5>
+                            <h4>Kevin Yeh</h4>
                             <p class="aboutinfo">Graphic Designer/Web Developer</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <footer class="footer">
         <div id="contact">
             <h3>Send Us An Email</h3>
@@ -168,6 +170,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="assets/js/javascript.js"></script>
 </body>
 
 </html>
