added logo in header; added scroll to top function; added text to sec1; added name to sec2; added button to sec3;

--- a/index.html
+++ b/index.html
@@ -14,21 +14,28 @@
 
 <body>
     <div class="header">
-        <nav>
-            <ul>
-                <li><a class="tgjactive" href="#">Home</a></li>
-                <li><a href="#">Form</a></li>
-                <li><a href="#">Showcase</a></li>
-            </ul>
-        </nav>
+        <div class="row">
+            <img id="logo" src="assets/svg/tgj_logo.svg">
+            <nav>
+                <ul>
+                    <li><a class="tgjactive" href="#">Home</a></li>
+                    <li><a href="form.html">Form</a></li>
+                    <li><a href="#">Showcase</a></li>
+                    <div></div>
+                </ul>
+            </nav>
+        </div>
     </div>
     <!-- welcome section -->
     <section id="sec1">
+        <h2>Welcome To...</h2>
+        <p>The Graphic Jar is here to help create your one of kind design project.</p>
+        <p>We spent many hours creating a system that ensures the visions that you have </p>
     </section>
     <!-- client showcase slideshow -->
     <section id="sec2">
-        <h2>See Our Past Clients</h2>
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="3000">
+        <h1>...The <span>Graphic</span> Jar</h1>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="5000">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -56,7 +63,7 @@
                             </div>
                             <div class="col-lg-6 my-auto ml-0">
                                 <p class="clients">
-                                Create a new html file called add.html //make a function called "adder" that take three arguments (x, y, z). // The function should add the arguments together, and log the result to the console. //check if your function works by trying the following lines: /* add(1,2,3); add(3,2,1); add(4,4,4); add(5,6,7); */
+                                    Create a new html file called add.html //make a function called "adder" that take three arguments (x, y, z). // The function should add the arguments together, and log the result to the console. //check if your function works by trying the following lines: /* add(1,2,3); add(3,2,1); add(4,4,4); add(5,6,7); */
                                 </p>
                                 <p class="comment">result to the console. //check if your function works by trying the following lines: /* add(1,2,3); add(3,2,1); add(4,4,4); add(5,6,7); </p>
                             </div>
@@ -71,8 +78,8 @@
                             </div>
                             <div class="col-lg-6 my-auto ml-0">
                                 <p class="clients">
-                                Create a new html file called add.html //make a function called "adder" that take three arguments (x, y, z). // The function should add the arguments together, and log the result to the console. //check if your function works by trying the following lines: /* add(1,2,3); add(3,2,1); add(4,4,4); add(5,6,7); */
-                                </p>                                
+                                    Create a new html file called add.html //make a function called "adder" that take three arguments (x, y, z). // The function should add the arguments together, and log the result to the console. //check if your function works by trying the following lines: /* add(1,2,3); add(3,2,1); add(4,4,4); add(5,6,7); */
+                                </p>
                                 <p class="comment">result to the console. //check if your function works by trying the following lines: /* add(1,2,3); add(3,2,1); add(4,4,4); add(5,6,7); </p>
                             </div>
                         </div>
@@ -122,6 +129,7 @@
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 </div>
             </div>
+            <a href="form.html"><button type="button" class="btn btn-primary"><span>Form </span></button></a>
         </div>
     </section>
     <section id="sec4">
