--- a/form.html
+++ b/form.html
@@ -4,6 +4,16 @@
 	<title></title>
 </head>
 <body>
-
+<form action="assets/php/contactform.php" method="post">
+	<div>Name</div>
+	<input type="text" class="name">
+	<div>Email</div>
+	<input type="text" class="email">
+	<div>Subject</div>
+	<input type="text" class="subject">
+	<div>Message</div>
+	<textarea class="message"></textarea>
+	<button class="submit">Submit</button>
+</form>
 </body>
 </html>
