redesign nav bar; redesign introduction; added services section; took out about section;

--- a/index.html
+++ b/index.html
@@ -13,29 +13,140 @@
 </head>
 
 <body>
-    <div class="header">
+    <header>
         <div class="row">
-            <img id="logo" src="assets/svg/tgj_logo.svg">
-            <nav>
-                <ul>
-                    <li><a class="tgjactive" href="#">Home</a></li>
-                    <li><a href="form.html">Form</a></li>
-                    <li><a href="#">Showcase</a></li>
-                    <div></div>
-                </ul>
-            </nav>
+            <div class="col-lg-4">
+                <img id="logo" src="assets/svg/tgj_logo.svg">
+            </div>
+            <div class="col-lg-4">
+                <div id="headerBut">
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <nav>
+                    <ul>
+                        <li><a class="tgjactive" href="#">Home</a></li>
+                        <li><a href="form.php">Form</a></li>
+                        <li><a href="#">Showcase</a></li>
+                        <div></div>
+                    </ul>
+                </nav>
+            </div>
         </div>
-    </div>
+    </header>
     <!-- welcome section -->
     <section id="sec1">
-        <h2>Welcome To...</h2>
+        <h1>Create designs easy<br> and effortlessly.</h1>
         <p>The Graphic Jar is here to help create your one of kind design project.</p>
         <p>We spent many hours creating a system that ensures the visions that you have </p>
+        <div id="sec1But">
+        </div>
+    </section>
+    <section id="sec5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <h5>Illustration</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <img src="assets/svg/up_arrow.svg">
+                </div>
+                <div class="col-lg-4">
+                    <h5>Branding</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <img src="assets/svg/up_arrow.svg">
+                </div>
+                <div class="col-lg-4">
+                    <h5>Web Design</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <img src="assets/svg/up_arrow.svg">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- our process -->
+    <section id="sec3">
+        <div class="container">
+            <h3>Follow Our Easy 3 Step Process</h3>
+            <div class="row">
+                <div class="col-lg-4">
+                    <img src="assets/svg/step2.svg" class="picture">
+                </div>
+                <div class="col-sm-8">
+                    <p class="stepstext">
+                        Create a new html file called add.html //make a function called "adder" that take three arguments (x, y, z). // The function should add the arguments together, and log the result to the console. //check if your function works by trying the following lines: /*
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-8">
+                    <p class="stepstext">
+                        Create a new html file called add.html //make a function called "adder" that take three arguments (x, y, z). // The function should add the arguments together, and log the result to the console. //check if your function works by trying the following lines: /*
+                    </p>
+                </div>
+                <div class="col-sm-4">
+                    <img src="assets/svg/step2.svg" class="picturemiddle">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <img src="assets/svg/step2.svg" class="picture">
+                </div>
+                <div class="col-sm-8">
+                    <p class="stepstext">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- FAQ -->
+    <section id="sec4">
+        <div class="container">
+            <div class="accordion" id="accordionExample">
+                <div class="card">
+                        <h5 class="mb-0">
+        <button class="btn btn-link card-header collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne" id="headingOne">
+          Collapsible Group Item #1
+        </button>
+      </h5>
+                    <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                        <div class="card-body">
+                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                        <h5 class="mb-0">
+        <button class="btn btn-link card-header collapsed" id="headingTwo" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+          Collapsible Group Item #2
+        </button>
+      </h5>
+                    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                        <div class="card-body">
+                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                        <h5 class="mb-0">
+        <button class="btn btn-link card-header collapsed" id="headingThree" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+          Collapsible Group Item #3
+        </button>
+      </h5>
+                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                        <div class="card-body">
+                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <!-- client showcase slideshow -->
     <section id="sec2">
-        <h1>...The <span>Graphic</span> Jar</h1>
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="5000">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="4000">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -94,71 +205,6 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
             </a>
-        </div>
-    </section>
-    <!-- our process -->
-    <section id="sec3">
-        <div class="container">
-            <h3>Follow Our Easy 3 Step Process</h3>
-            <div class="row">
-                <div class="col-lg-4">
-                    <img src="assets/svg/step2.svg" class="picture">
-                </div>
-                <div class="col-sm-8">
-                    <p class="stepstext">
-                        Create a new html file called add.html //make a function called "adder" that take three arguments (x, y, z). // The function should add the arguments together, and log the result to the console. //check if your function works by trying the following lines: /*
-                    </p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-8">
-                    <p class="stepstext">
-                        Create a new html file called add.html //make a function called "adder" that take three arguments (x, y, z). // The function should add the arguments together, and log the result to the console. //check if your function works by trying the following lines: /*
-                    </p>
-                </div>
-                <div class="col-sm-4">
-                    <img src="assets/svg/step2.svg" class="picturemiddle">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-4">
-                    <img src="assets/svg/step2.svg" class="picture">
-                </div>
-                <div class="col-sm-8">
-                    <p class="stepstext">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                </div>
-            </div>
-            <a href="form.html"><button type="button" class="btn btn-primary"><span>Form </span></button></a>
-        </div>
-    </section>
-    <section id="sec4">
-        <h2>Meet The Team</h2>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="row">
-                        <div class="col-lg">
-                            <img src="assets/images/Christina_pic.jpg" class="profileimg">
-                        </div>
-                        <div class="col-lg p-0">
-                            <h4>Christina Sayegh</h4>
-                            <p class="aboutinfo">Graphic Designer/Illustrator</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="row">
-                        <div class="col-lg">
-                            <img src="assets/images/Kevin_pic.jpg" class="profileimg">
-                        </div>
-                        <div class="col-lg p-0">
-                            <h4>Kevin Yeh</h4>
-                            <p class="aboutinfo">Graphic Designer/Web Developer</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </section>
     <footer class="footer">
