--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 </head>
 
 <body>
+    <!-- navigation bar -->
     <header>
         <div class="row">
             <div class="col-lg-4">
-                <img id="logo" src="assets/svg/tgj_logo.svg">
+                <img id="logo" src="assets/svg/tgjlogoheader(white)2.svg">
             </div>
             <div class="col-lg-4">
                 <div id="headerBut">
@@ -42,61 +43,55 @@
         <div id="sec1But">
         </div>
     </section>
+    <!-- what makes us -->
     <section id="sec5">
         <div class="container">
+            <h5>Why Are We Different?</h5>
             <div class="row">
                 <div class="col-lg-4">
-                    <h5>Illustration</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <h5>Illustration/Fresh Designs</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     <img src="assets/svg/up_arrow.svg">
                 </div>
                 <div class="col-lg-4">
-                    <h5>Branding</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <h5>Branding/Premium And Efficient</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     <img src="assets/svg/up_arrow.svg">
                 </div>
                 <div class="col-lg-4">
-                    <h5>Web Design</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <h5>Web Design/Around The Clock Care</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     <img src="assets/svg/up_arrow.svg">
                 </div>
             </div>
         </div>
     </section>
-    <!-- our process -->
+    <!-- 3 step process -->
     <section id="sec3">
-        <div class="container">
-            <h3>Follow Our Easy 3 Step Process</h3>
-            <div class="row">
-                <div class="col-lg-4">
-                    <img src="assets/svg/step2.svg" class="picture">
-                </div>
-                <div class="col-sm-8">
-                    <p class="stepstext">
-                        Create a new html file called add.html //make a function called "adder" that take three arguments (x, y, z). // The function should add the arguments together, and log the result to the console. //check if your function works by trying the following lines: /*
-                    </p>
-                </div>
+        <h3>Follow Our Easy 3 Step Process</h3>
+        <div class="row">
+            <div class="col-lg-7">
+                <iframe src=""></iframe>
             </div>
-            <div class="row">
-                <div class="col-sm-8">
-                    <p class="stepstext">
-                        Create a new html file called add.html //make a function called "adder" that take three arguments (x, y, z). // The function should add the arguments together, and log the result to the console. //check if your function works by trying the following lines: /*
-                    </p>
+            <div class="col-lg-4">
+                <div class="row">
+                    <div id="steptext">
+                        <p id="stepone" class="active">
+                            Choose a project. Start by choosing the type of design you would like. We offer many options to choose from. We specialize in branding.
+                        </p>
+                        <p id="steptwo">
+                            Fill out our simple straight forward survey that will help us create your one of a kind design.
+                        </p>
+                        <p id="stepthree">
+                            Click send and we'll get back to you withing 24hours</p>
+                    </div>
                 </div>
-                <div class="col-sm-4">
-                    <img src="assets/svg/step2.svg" class="picturemiddle">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-4">
-                    <img src="assets/svg/step2.svg" class="picture">
-                </div>
-                <div class="col-sm-8">
-                    <p class="stepstext">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <div class="row">
+                    <div id="stepbutton">
+                        <button id="steponebutton">Step 1</button>
+                        <button id="steptwobutton">Step 2</button>
+                        <button id="stepthreebutton">Step 3</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -106,7 +101,7 @@
         <div class="container">
             <div class="accordion" id="accordionExample">
                 <div class="card">
-                        <h5 class="mb-0">
+                    <h5 class="mb-0">
         <button class="btn btn-link card-header collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne" id="headingOne">
           Collapsible Group Item #1
         </button>
@@ -118,7 +113,7 @@
                     </div>
                 </div>
                 <div class="card">
-                        <h5 class="mb-0">
+                    <h5 class="mb-0">
         <button class="btn btn-link card-header collapsed" id="headingTwo" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
           Collapsible Group Item #2
         </button>
@@ -130,7 +125,7 @@
                     </div>
                 </div>
                 <div class="card">
-                        <h5 class="mb-0">
+                    <h5 class="mb-0">
         <button class="btn btn-link card-header collapsed" id="headingThree" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
           Collapsible Group Item #3
         </button>
@@ -156,10 +151,10 @@
                 <div class="carousel-item active mb-5">
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-5 mx-auto">
+                            <div class="col-lg-4 mx-auto">
                                 <img class="d-block w-100" src="assets/svg/carousel1.svg" alt="First slide">
                             </div>
-                            <div class="col-lg-6 my-auto ml-0">
+                            <div class="col-lg-7 my-auto ml-0">
                                 <p class="clients">Create a new html file called add.html //make a function called "adder" that take three arguments (x, y, z). // The function should add the arguments together, and log the result to the console. //check if your function works by trying the following lines: /* add(1,2,3); add(3,2,1); add(4,4,4); add(5,6,7); */</p>
                                 <p class="comment">result to the console. //check if your function works by trying the following lines: /* add(1,2,3); add(3,2,1); add(4,4,4); add(5,6,7); </p>
                             </div>
@@ -169,10 +164,10 @@
                 <div class="carousel-item mb-5">
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-5 mx-auto">
+                            <div class="col-lg-4 mx-auto">
                                 <img class="d-block w-100" src="assets/svg/carousel1.svg" alt="First slide">
                             </div>
-                            <div class="col-lg-6 my-auto ml-0">
+                            <div class="col-lg-7 my-auto ml-0">
                                 <p class="clients">
                                     Create a new html file called add.html //make a function called "adder" that take three arguments (x, y, z). // The function should add the arguments together, and log the result to the console. //check if your function works by trying the following lines: /* add(1,2,3); add(3,2,1); add(4,4,4); add(5,6,7); */
                                 </p>
@@ -184,10 +179,10 @@
                 <div class="carousel-item mb-5">
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-5 mx-auto">
+                            <div class="col-lg-4 mx-auto">
                                 <img class="d-block w-100" src="assets/svg/carousel1.svg" alt="First slide">
                             </div>
-                            <div class="col-lg-6 my-auto ml-0">
+                            <div class="col-lg-7 my-auto ml-0">
                                 <p class="clients">
                                     Create a new html file called add.html //make a function called "adder" that take three arguments (x, y, z). // The function should add the arguments together, and log the result to the console. //check if your function works by trying the following lines: /* add(1,2,3); add(3,2,1); add(4,4,4); add(5,6,7); */
                                 </p>
