--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <div class="col-lg-4">
                 <nav>
                     <ul>
-                        <li><a class="tgjactive" href="#">Home</a></li>
-                        <li><a href="form.php">Form</a></li>
+                        <li><a class="tgjactive" href="index.html">Home</a></li>
+                        <li><a href="form.html">Form</a></li>
                         <li><a href="#">Showcase</a></li>
                         <div></div>
                     </ul>
